// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwatchList component should render a SwatchList with a selectedFinishId 1`] = `
<RCTScrollView
  dataSource={
    ListViewDataSource {
      "items": 11,
    }
  }
  enableEmptySections={true}
  horizontal={true}
  renderRow={[Function]}
  renderScrollComponent={[Function]}
  scrollEnabled={false}
  showHorizontalScrollIndicator={false}
  style={
    Object {
      "height": 42,
    }
  }
>
  <View>
    <View />
    <View />
    <View />
    <View />
    <View />
    <View />
    <View />
    <View />
    <View />
    <View />
    <View />
  </View>
</RCTScrollView>
`;

exports[`SwatchList component should render a SwatchList with required props 1`] = `
<RCTScrollView
  dataSource={
    ListViewDataSource {
      "items": 10,
    }
  }
  enableEmptySections={true}
  horizontal={true}
  renderRow={[Function]}
  renderScrollComponent={[Function]}
  scrollEnabled={false}
  showHorizontalScrollIndicator={false}
  style={
    Object {
      "height": 42,
    }
  }
>
  <View>
    <View />
    <View />
    <View />
    <View />
    <View />
    <View />
    <View />
    <View />
    <View />
    <View />
  </View>
</RCTScrollView>
`;
